---
config:
  layout: elk
---
erDiagram
    %% User Management Relationships
    User ||--o| UserProfile : has
    User ||--o{ UserSkill : has
    User ||--o{ UserLanguage : speaks
    User ||--o{ UserIndustry : interested_in
    User ||--o{ ResumeAnswer : provides
    User ||--o{ PasswordResetOTP : requests
    User ||--o{ Notification : receives
    User ||--o{ SavedJob : saves
    
    UserProfile ||--o{ UserSkill : has
    UserProfile ||--o{ UserLanguage : speaks
    UserProfile ||--o{ UserIndustry : interested_in
    
    skill ||--o{ UserSkill : possessed_by
    language ||--o{ UserLanguage : spoken_by
    resumequestion ||--o{ ResumeAnswer : answered_by

    %% Company Management Relationships
    User ||--o| Company : owns
    Company ||--o| CompanyVerification : has
    Company }o--|| Industry : belongs_to
    Company ||--o| Subscription : has
    Subscription ||--o{ Invoice : generates
    
    Company ||--o{ Review : receives
    User ||--o{ Review : writes
    
    Industry ||--o{ UserIndustry : attracts

    %% Job Management Relationships
    Company ||--o{ Job : posts
    Job }o--|| Industry : categorized_in
    Job }o--|| Company : posted_by
    
    User ||--o{ JobApplication : submits
    Job ||--o{ JobApplication : receives
    
    Job ||--o{ SavedJob : saved_by
    
    JobApplication ||--o| JobOffer : receives
    
    User ||--o{ Job : creates
    User ||--o{ Job : updates

    %% Communication Relationships
    Conversation ||--o{ ChatMessage : contains
    User ||--o{ ChatMessage : sends
    
    Job ||--o{ Conversation : about
    JobApplication ||--o| Conversation : initiates
    
    User ||--o{ Conversation : "employer_side"
    User ||--o{ Conversation : "jobseeker_side"

    %% Admin & Report Relationships
    User ||--o{ Report : files
    Job ||--o{ Report : reported
    
    Report ||--o{ Appeal : generates
    User ||--o{ Appeal : files
    User ||--o{ Appeal : reviews
    
    Job ||--o{ JobAppeal : appealed
    User ||--o{ JobAppeal : files
    User ||--o{ JobAppeal : reviews

    %% Entities
    User {
        int id PK
        string email UK
        string password
        string phoneNumber
        boolean isEmailVerified
        boolean isPhoneVerified
        boolean isActive
        datetime lastLoginAt
        datetime createdAt
        datetime updatedAt
        string fullName
        enum preferredLanguage
        enum role
        enum status
        datetime suspendedAt
        string suspendedBy
        text suspensionReason
        text pushToken
    }

    UserProfile {
        int id PK
        int userId FK
        datetime dateOfBirth
        enum gender
        string nationality
        string address
        string city
        string state
        string postcode
        int preferredSalaryMin
        int preferredSalaryMax
        datetime availableFrom
        enum workingHours
        enum transportMode
        int maxTravelDistance
        int experienceYears
        string certifications
        boolean profileCompleted
        text profilePicture
        text resumeUrl_en
        text resumeUrl_ms
        text resumeUrl_zh
        text resumeUrl_ta
        text resumeUrl_uploaded
        string uploadedLanguage
        string uploadedFileName
        datetime uploadedAt
        enum resumeSource
        datetime resumeGeneratedAt
        int resumeVersion
        float latitude
        float longitude
    }

    RegistrationOTP {
        string id PK
        string email UK
        string otp
        datetime expiresAt
        text data
    }

    PasswordResetOTP {
        string id PK
        int userId FK
        string codeHash
        string otpSessionToken UK
        datetime expiresAt
        datetime consumedAt
        int attempts
    }

    UserSkill {
        int id PK
        int userId FK
        int skillId FK
    }

    UserLanguage {
        int id PK
        int userId FK
        int languageId FK
    }

    UserIndustry {
        int id PK
        int userId FK
        int industryId FK
    }

    ResumeAnswer {
        int id PK
        int userId FK
        string questionId FK
        json answer
    }

    resumequestion {
        int id PK
        string questionId UK
        string question
        string type
        json options
        boolean required
        string conditionalOn
        string conditionalValue
    }

    skill {
        int id PK
        string name UK
        boolean isActive
    }

    language {
        int id PK
        string name UK
        boolean isActive
    }

    Company {
        int id PK
        string name
        string slug UK
        text description
        text logo
        string website
        string email
        string phone
        string address
        string city
        string state
        string postcode
        enum companySize
        boolean isVerified
        boolean isActive
        int userId FK
        int industryId FK
        boolean onboardingCompleted
        int onboardingStep
        text verificationDocument
        string verificationStatus
        text verificationRemark
        datetime verifiedDate
        boolean hasCompletedInitialSubscription
    }

    CompanyVerification {
        int id PK
        int companyId FK
        text businessDocument
        string documentType
        string documentName
        boolean phoneVerified
        boolean emailVerified
        string status
        text reviewNotes
        int reviewedBy
        datetime reviewedAt
        datetime submittedAt
    }

    Industry {
        int id PK
        string name UK
        string slug UK
        string icon
        text description
        boolean isActive
    }

    Review {
        int id PK
        int userId FK
        int companyId FK
        int rating
        string title
        text comment
        boolean isAnonymous
        boolean isApproved
        boolean isVisible
        text employerReply
        text flagReason
        datetime flaggedAt
        boolean isFlagged
        datetime repliedAt
    }

    Subscription {
        int id PK
        int companyId FK
        enum planType
        enum status
        string stripeCustomerId UK
        string stripeSubscriptionId UK
        string stripePriceId
        datetime stripeCurrentPeriodEnd
        int jobPostLimit
        int jobPostsUsed
        boolean canReplyToReviews
        datetime billingCycleStart
        datetime billingCycleEnd
        datetime lastPaymentDate
        float lastPaymentAmount
        datetime cancelledAt
    }

    Invoice {
        int id PK
        int subscriptionId FK
        string stripeInvoiceId UK
        float amount
        string currency
        string status
        text invoiceUrl
        text invoicePdf
        datetime paidAt
    }

    Job {
        int id PK
        string title
        string slug UK
        text description
        text requirements
        text benefits
        int industryId FK
        int companyId FK
        enum jobType
        enum workingHours
        enum experienceLevel
        string address
        string city
        string state
        string postcode
        boolean isRemote
        int salaryMin
        int salaryMax
        enum salaryType
        boolean isActive
        boolean isFeatured
        datetime applicationDeadline
        datetime startDate
        int viewCount
        int applicationCount
        int estimatedHireDaysMin
        int estimatedHireDaysMax
        int createdBy FK
        int updatedBy FK
        text skills
        enum approvalStatus
        datetime approvedAt
        datetime rejectedAt
        int rejectedBy FK
        text rejectionReason
        boolean isSuspended
        datetime suspendedAt
        string suspendedBy
        text suspensionReason
        float latitude
        float longitude
    }

    JobApplication {
        int id PK
        int userId FK
        int jobId FK
        enum status
        text coverLetter
        string resumeUrl
        datetime appliedAt
        datetime updatedAt
        string employerNote
        datetime interviewDate
    }

    SavedJob {
        int id PK
        int userId FK
        int jobId FK
        datetime savedAt
    }

    JobOffer {
        int id PK
        int applicationId FK
        datetime startDate
        string contractDuration
        string durationPeriod
        decimal salaryAmount
        string salaryCurrency
        string payFrequency
        string contractUrl
        boolean employerConfirmed
        boolean compliesWithLaws
        enum applicantStatus
        text applicantSignature
        text signedContractUrl
        boolean employerVerified
    }

    JobAppeal {
        int id PK
        int jobId FK
        int employerId FK
        text explanation
        text evidence
        json updatedJobData
        enum status
        enum appealType
        int reviewedBy FK
        datetime reviewedAt
        text reviewNotes
        string adminDecision
    }

    Conversation {
        int id PK
        int applicationId FK
        int employerId FK
        int jobSeekerId FK
        int jobId FK
        datetime lastMessageAt
        boolean isActive
    }

    ChatMessage {
        int id PK
        int conversationId FK
        int senderId FK
        text content
        enum messageType
        text attachmentUrl
        string attachmentName
        int attachmentSize
        string attachmentType
        boolean isRead
        datetime readAt
        boolean isEdited
        datetime editedAt
        boolean isDeleted
        datetime deletedAt
    }

    Notification {
        int id PK
        int userId FK
        string title
        text message
        enum type
        boolean isRead
        string actionUrl
        text metadata
    }

    Report {
        int id PK
        int userId FK
        int jobId FK
        enum reportType
        text description
        text evidence
        enum status
        int reviewedBy FK
        datetime reviewedAt
        text reviewNotes
    }

    Appeal {
        int id PK
        int reportId FK
        int employerId FK
        text explanation
        text evidence
        enum status
        int reviewedBy FK
        datetime reviewedAt
        text reviewNotes
    }
